examples/type_system/failing/159_match_nested_tuple_mixed_shape_non_exhaustive.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

type Wrap<T> = W(T) | Z

fn main() -> Unit {
    let w = mystery_value
    let _x = match w {
        W((1, 2)) -> 1,
        W(1) -> 2,
        Z -> 0,
    }
}
